# SaaS-workspaces

./: .env.example  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: main.py  startup.py
app/api/: constants.py  deps.py
app/api/v1/: auth.py  invitations.py  members.py  projects.py  workspaces.py
app/core/: abuse.py  authorization.py  config.py  logging.py  middleware.py  rate_limit.py  security.py
app/db/: audit.py  session.py
app/db/migrations/: env.py
app/db/migrations/versions/: 0001_initial_empty_migration.py  0002_create_user_workspace_and_workspace_.py  0003_create_project_table.py  0004_create_invitation_table.py  0005_add_workspace_role_enum.py  0006_add_audit_fields.py  0007_add_joined_at_to_workspace_member.py  2883bccc7222_initial_empty_migration.py  722f004a966a_create_user_workspace_and_workspace_.py  865371a245d9_create_project_table.py
app/models/: __init__.py  invitation.py  project.py  user.py  workspace.py
app/schemas/: invitation.py  membership.py  project.py  user.py  workspace.py
app/services/: auth_service.py  invitation_service.py  membership_service.py  project_service.py  workspace_service.py
docs/: architecture.md
tests/: conftest.py
tests/e2e/: test_full_flow.py
tests/integration/: test_audit.py  test_auth.py  test_db_connection.py  test_invitations.py  test_members_management.py  test_models.py  test_permissions.py  test_projects.py  test_rate_limit.py  test_workspaces.py
tests/unit/: test_health.py  test_security.py
