[project]
name = "saas-workspaces"
version = "0.1.0"
description = "SaaS Workspaces backend API in Python built with FastAPI"
authors = [
    { name = "Javier González Martín", email = "jgm_1997@protonmail.com" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.115.0,<0.129.0)",
    "uvicorn[standard] (>=0.30.0,<0.41.0)",
    "sqlalchemy (>=2.0.45,<3.0.0)",
    "alembic (>=1.17.2,<2.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "pydantic[email] (>=2.12.5,<3.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "bcrypt (>=3.2.0,<4.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "psycopg[binary] (>=3.3.2,<4.0.0)",
    "python-json-logger (>=4.0.0,<5.0.0)",
    "slowapi (>=0.1.9,<0.2.0)"
]

[dependency-groups]
dev = [
    "pytest (>=8.0.0,<10.0.0)",
    "pytest-asyncio (>=0.23.0,<2.0.0)",
    "httpx (>=0.27.0,<0.29.0)",
    "requests (>=2.0.0,<3.0.0)",
    "black (>=24.0.0,<26.0.0)",
    "isort (>=5.13.0,<8.0.0)",
    "ruff (>=0.6.0,<0.15.0)",
    "pre-commit (>=3.8.0,<5.0.0)",
    "coverage (>=7.13.1,<8.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "saas-workspaces"
version = "0.1.0"
description = "SaaS Workspaces backend in Python"
authors = ["Javier González Martín <jgm_1997@protonmail.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
sqlalchemy = "^2.0.0"
alembic = "^1.13.0"
psycopg = { version = "^3.1.0", extras = ["binary"] }
pydantic = "^2.0.0"
python-jose = { version = "^3.3.0", extras = ["cryptography"] }
passlib = { version = "^1.7.4", extras = ["bcrypt"] }
bcrypt = ">=3.2.0,<4.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
httpx = "^0.27.0"
black = "^24.0.0"
isort = "^5.13.0"
ruff = "^0.6.0"
pre-commit = "^3.8.0"
coverage = "^7.6.0"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = []

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
filterwarnings = ["ignore:.*crypt.*:DeprecationWarning:passlib.utils"]
